// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/image/demo/basic.md correctly 1`] = `
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png">
  <!---->
  <!---->
</div>
<!---->
`;

exports[`renders ./antdv-demo/docs/image/demo/fallback.md correctly 1`] = `
<div class="ant-image" style="width: 200px; height: 200px;"><img class="ant-image-img" src="error">
  <!---->
  <!---->
</div>
<!---->
`;

exports[`renders ./antdv-demo/docs/image/demo/placeholder.md correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center">
  <div class="ant-space-item" style="margin-right: 12px;">
    <div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?1479744000000">
      <div aria-hidden="true" class="ant-image-placeholder">
        <div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200">
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div class="ant-space-item"><button class="ant-btn ant-btn-primary" type="button">
      <!----><span>reload</span>
    </button></div>
</div>
`;

exports[`renders ./antdv-demo/docs/image/demo/previewGroup.md correctly 1`] = `
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://qn.antdv.com/vue.png">
  <!---->
  <!---->
</div>
<!---->
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://qn.antdv.com/logo.png">
  <!---->
  <!---->
</div>
<!---->
<!---->
`;
